--- a/balance-provider/src/main/resources/application.properties
+++ b/balance-provider/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=balance-provider
 server.port=8902
 
-eureka.client.serviceUrl.defaultZone=http://10.28.95.136:8800/eureka-server/eureka/
+eureka.client.serviceUrl.defaultZone=http://10.28.95.136:8800/eureka/
+
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
