--- a/spring-cloud-zuul/src/main/resources/application.properties
+++ b/spring-cloud-zuul/src/main/resources/application.properties
@@ -6,3 +6,7 @@ zuul.routes.api-a.path=/user/**
 zuul.routes.api-a.serviceId=user-provider
 
 eureka.client.serviceUrl.defaultZone=http://10.28.95.136:8800/eureka/
+
+
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
