--- a/user-provider/src/main/resources/application.properties
+++ b/user-provider/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=user-provider
 server.port=8900
-eureka.client.serviceUrl.defaultZone=http://10.28.95.136:8800/eureka-server/eureka/
+eureka.client.serviceUrl.defaultZone=http://10.28.95.136:8800/eureka/
+
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
