--- a/spring-cloud-feign/src/main/resources/application.properties
+++ b/spring-cloud-feign/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=spring-cloud-feign
 server.port=8801
-eureka.client.serviceUrl.defaultZone=http://106.14.19.119:8800/eureka-server/eureka/
+eureka.client.serviceUrl.defaultZone=http://106.14.19.119:8800/eureka/
 
 feign.hystrix.enabled=true
 
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
